FIX #1427, #1569: gcc 4.2.x needs -fno-toplevel-reorder We now have various flags that need to be passed to gcc, but only if the local gcc version supports them.  So instead of wiring this knowledge into ghc when it is built, we now put these "extra gcc flags" into a text file in $libdir, extra-gcc-flags, which is created by configure.  It is also created by the configure script of a binary distribution, so a binary dist is independent of the gcc version used to build it.
Hopefully I got the binary-dist stuff right, but binary dists aren't
currently working so we'll need to come back and check this.

--- a/configure.ac
+++ b/configure.ac
@@ -876,9 +876,7 @@ dnl     If gcc, make sure it's at least 2.1
 dnl
 FP_HAVE_GCC
 FP_MINGW_GCC
-FP_GCC_NEEDS_NO_OMIT_LFPTR
-FP_GCC_HAS_NO_UNIT_AT_A_TIME
-FP_GCC_HAS_WRAPV
+FP_GCC_EXTRA_FLAGS
 
 dnl ** figure out how to invoke cpp directly (gcc -E is no good)
 AC_PROG_CPP
@@ -1230,6 +1228,6 @@ else
 fi
 AC_SUBST(HavePapi)
 
-AC_CONFIG_FILES([mk/config.mk ghc.spec docs/users_guide/ug-book.xml])
+AC_CONFIG_FILES([mk/config.mk ghc.spec extra-gcc-opts docs/users_guide/ug-book.xml])
 AC_CONFIG_COMMANDS([mk/stamp-h],[echo timestamp > mk/stamp-h])
 AC_OUTPUT
