Link ghc-pkg and hpc with containers if building ghc 6.7 or newer

--- a/utils/ghc-pkg/Makefile
+++ b/utils/ghc-pkg/Makefile
@@ -16,6 +16,10 @@ SRC_HC_OPTS += $(PACKAGE_CABAL)
 # we must also build with $(GhcHcOpts) here:
 SRC_HC_OPTS += $(GhcHcOpts) $(GhcStage1HcOpts)
 
+ifeq "$(ghc_ge_607)" "YES"
+SRC_HC_OPTS += -package containers
+endif
+
 # On Windows, ghc-pkg is a standalone program
 # ($bindir/ghc-pkg.exe), whereas on Unix it needs a wrapper script
 # to pass the appropriate flag to the real binary
