--- a/utils/hpc/Makefile
+++ b/utils/hpc/Makefile
@@ -8,6 +8,10 @@ HPC_LIB         = $(TOP)/libraries/hpc
 include $(GHC_COMPAT_DIR)/compat.mk
 SRC_HC_OPTS += $(PACKAGE_HPC) -cpp 
 
+ifeq "$(ghc_ge_607)" "YES"
+SRC_HC_OPTS += -package containers
+endif
+
 binary-dist:
 	$(INSTALL_DIR)                $(BIN_DIST_DIR)/utils/hpc
 	$(INSTALL_DATA)    Makefile   $(BIN_DIST_DIR)/utils/hpc/
