In bindisttest, don't try to configure/install the bindist on Windows

--- a/bindisttest/Makefile
+++ b/bindisttest/Makefile
@@ -14,9 +14,13 @@ all:
 	$(RM) -rf installed
 	$(RM) -rf ghc*
 	$(RM) HelloWorld HelloWorld.o HelloWorld.hi output
-	$(TAR) -jxf $(BIN_DIST_TARBALL)
+	$(TAR) -jxf ../$(BIN_DIST_TARBALL)
+ifeq "$(Windows)" "YES"
+	mv $(BIN_DIST_NAME) $(INST_DIR)
+else
 	cd $(BIN_DIST_NAME) && ./configure --prefix=$(INST_DIR)
 	cd $(BIN_DIST_NAME) && make install
+endif
 	$(INST_DIR)/bin/ghc --make HelloWorld
 	./HelloWorld > output
 	$(CONTEXT_DIFF) output expected_output
