--- a/libraries/Makefile
+++ b/libraries/Makefile
@@ -287,7 +287,7 @@ clean: $(foreach SUBDIR,$(SUBDIRS),clean.library.$(SUBDIR))
 	$(RM) -rf bootstrapping.*
 	$(RM) -rf ifBuildable
 	$(RM) -rf installPackage
-	$(RM) -f libraries.txt index.html doc-index.html
+	$(RM) -f libraries.txt index.html doc-index.html doc-index-*.html
 
 $(foreach SUBDIR,$(SUBDIRS),clean.library.$(SUBDIR)): \
 clean.library.%:
