--- a/ghc.spec.in
+++ b/ghc.spec.in
@@ -86,11 +86,14 @@ test -f configure || sh boot
 ./configure --prefix=%{_prefix} --mandir=%{_mandir}
 make %{?jobs:-j%jobs} HTML_DIR_INSTALLED=%{_defaultdocdir}/%{name}/libraries/'$(PACKAGE)'
 make html
+make -C libraries doc
+( cd libraries/Cabal && docbook2html doc/Cabal.xml --output doc/Cabal )
 make -C docs/ext-core ps
 make -C docs/storage-mgt ps
 
 %install
 make prefix=${RPM_BUILD_ROOT}%{_prefix} install
+mv ${RPM_BUILD_ROOT}%{_prefix}/bin/hsc2hs ${RPM_BUILD_ROOT}%{_prefix}/bin/hsc2hs-ghc
 make datadir=`pwd` mandir=${RPM_BUILD_ROOT}%{_mandir} install-docs
 
 # generate the file list for lib/ _excluding_ all files needed for profiling
@@ -147,8 +150,9 @@ fi
 %doc docs/storage-mgt/rp.ps
 %doc docs/storage-mgt/sm.ps
 %doc docs/users_guide/users_guide
-%doc html/*
+%doc docs/index.html
 %doc libraries/Cabal/doc/Cabal
+%{_datadir}/ghc
 %{_mandir}/man1/ghc.1*
 %{_prefix}/bin/ghc
 %{_prefix}/bin/ghc-%{version}
@@ -159,7 +163,9 @@ fi
 %{_prefix}/bin/ghcprof
 %{_prefix}/bin/hasktags
 %{_prefix}/bin/hp2ps
+%{_prefix}/bin/hpc
 %{_prefix}/bin/hsc2hs-ghc
+%{_prefix}/bin/hsc2hs-%{version}
 %{_prefix}/bin/runghc
 
 %files prof -f rpm-prof-lib-files
