Use DESTDIR when installing

--- a/driver/ghc/Makefile
+++ b/driver/ghc/Makefile
@@ -11,7 +11,7 @@ include $(TOP)/mk/boilerplate.mk
 ifneq "$(HOSTPLATFORM)" "i386-unknown-mingw32"
 LINK = ghc
 LINK_TARGET = $(LINK)-$(ProjectVersion)
-INSTALLED_SCRIPT=$(bindir)/$(LINK_TARGET)
+INSTALLED_SCRIPT=$(DESTDIR)$(bindir)/$(LINK_TARGET)
 install::
 	$(RM) -f $(INSTALLED_SCRIPT)
 	echo "#!$(SHELL)"                                 >> $(INSTALLED_SCRIPT)
