--- a/utils/hsc2hs/Makefile
+++ b/utils/hsc2hs/Makefile
@@ -60,7 +60,7 @@ else
 INSTALL_LIBEXECS += $(HS_PROG)
 LINK = hsc2hs
 LINK_TARGET = $(LINK)-$(ProjectVersion)
-INSTALLED_SCRIPT=$(bindir)/$(LINK_TARGET)
+INSTALLED_SCRIPT=$(DESTDIR)$(bindir)/$(LINK_TARGET)
 install::
 	$(RM) -f $(INSTALLED_SCRIPT)
 	echo "#!$(SHELL)"                  >> $(INSTALLED_SCRIPT)
