--- a/driver/ghci/Makefile
+++ b/driver/ghci/Makefile
@@ -25,7 +25,7 @@ install::
 else
 LINK = ghci
 LINK_TARGET = $(LINK)-$(ProjectVersion)
-INSTALLED_SCRIPT=$(bindir)/$(LINK_TARGET)
+INSTALLED_SCRIPT=$(DESTDIR)$(bindir)/$(LINK_TARGET)
 install::
 	$(RM) -f $(INSTALLED_SCRIPT)
 	echo "#!$(SHELL)"                                          >> $(INSTALLED_SCRIPT)
