no -auto-all for CorePrep

--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -812,7 +812,7 @@ endif
 # typecheck/TcType_HC_OPTS += -auto-all
 # typecheck/TcUnify_HC_OPTS += -auto-all
 
-coreSyn/CorePrep_HC_OPTS += -auto-all
+# coreSyn/CorePrep_HC_OPTS += -auto-all
 # parser/Parser_HC_OPTS += -fasm
 
 #-----------------------------------------------------------------------------
