Fix where all the documentation gets installed The paths can also now be overridden with the standard configure flags --docdir=, --htmldir= etc. We were always advertising these, but now we actually obey them.

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -6,7 +6,7 @@ SUBDIRS = man docbook-cheat-sheet ext-core storage-mgt users_guide
 PAGES = index.html
 
 install-docs :: $(PAGES)
-	$(INSTALL_DIR) $(datadir)/html
-	$(INSTALL_DATA) $(INSTALL_OPTS) $(PAGES) $(datadir)/html
+	$(INSTALL_DIR) 							 $(htmldir)
+	$(INSTALL_DATA) $(INSTALL_OPTS) $(PAGES) $(htmldir)
 
 include $(TOP)/mk/target.mk
