--- a/docs/Makefile
+++ b/docs/Makefile
@@ -6,7 +6,7 @@ SUBDIRS = man docbook-cheat-sheet ext-core storage-mgt users_guide
 PAGES = index.html
 
 install-docs :: $(PAGES)
-	$(INSTALL_DIR) 							 $(htmldir)
-	$(INSTALL_DATA) $(INSTALL_OPTS) $(PAGES) $(htmldir)
+	$(INSTALL_DIR) 							 $(DESTDIR)$(htmldir)
+	$(INSTALL_DATA) $(INSTALL_OPTS) $(PAGES) $(DESTDIR)$(htmldir)
 
 include $(TOP)/mk/target.mk
