Add a --print-docdir flag

--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -262,6 +262,7 @@ endif
 	@echo "cUSER_WAY_NAMES       = \"$(USER_WAY_NAMES)\"" >> $(CONFIG_HS)
 	@echo "cUSER_WAY_OPTS        = \"$(USER_WAY_OPTS)\"" >> $(CONFIG_HS)
 	@echo "cDEFAULT_TMPDIR       = \"$(DEFAULT_TMPDIR)\"" >> $(CONFIG_HS)
+	@echo "cDocDir               = \"$(docdir)\""         >> $(CONFIG_HS)
 	@echo done.
 
 CLEAN_FILES += $(CONFIG_HS)
