Use DESTDIR for installation

--- a/ghc.spec.in
+++ b/ghc.spec.in
@@ -84,7 +84,7 @@ needed.
 %build
 test -f configure || sh boot
 ./configure --prefix=%{_prefix} --mandir=%{_mandir}
-make %{?jobs:-j%jobs} HTML_DIR_INSTALLED=%{_defaultdocdir}/%{name}/libraries/'$(PACKAGE)'
+make %{?jobs:-j%jobs}
 make html
 make -C libraries doc
 ( cd libraries/Cabal && docbook2html doc/Cabal.xml --output doc/Cabal )
@@ -92,9 +92,8 @@ make -C docs/ext-core ps
 make -C docs/storage-mgt ps
 
 %install
-make prefix=${RPM_BUILD_ROOT}%{_prefix} install
+make DESTDIR=${RPM_BUILD_ROOT} install install-docs
 mv ${RPM_BUILD_ROOT}%{_prefix}/bin/hsc2hs ${RPM_BUILD_ROOT}%{_prefix}/bin/hsc2hs-ghc
-make datadir=`pwd` mandir=${RPM_BUILD_ROOT}%{_mandir} install-docs
 
 # generate the file list for lib/ _excluding_ all files needed for profiling
 # only
@@ -152,7 +151,7 @@ fi
 %doc docs/users_guide/users_guide
 %doc docs/index.html
 %doc libraries/Cabal/doc/Cabal
-%{_datadir}/ghc
+%{_datadir}/doc/ghc
 %{_mandir}/man1/ghc.1*
 %{_prefix}/bin/ghc
 %{_prefix}/bin/ghc-%{version}
