Don't hardwire the build path into the Haddock docs Formerly, the ghc-pkg was called to get the HTML dirs for other packages, but of course doing this at *build* time is totally wrong. Now we use a relative path, just like before. This is probably not perfect, but much better than before.
As a sidenote: Cabal calls the relevant flag "html-location", ghc-pkg calls the
field "haddock-html", and Haddock itself uses it as part of "read-interface".
Too much creativity is sometimes a bad thing...

--- a/libraries/Makefile
+++ b/libraries/Makefile
@@ -272,7 +272,7 @@ $(foreach SUBDIR,$(SUBDIRS),doc.library.$(SUBDIR)):\
 doc.library.%: stamp/configure.library.build$(CONFIGURE_STAMP_EXTRAS).% \
                %/setup/Setup ifBuildable/ifBuildable
 	if ifBuildable/ifBuildable $*; then \
-	  cd $* && setup/Setup haddock; \
+	  cd $* && setup/Setup haddock --html-location='../$$pkg'; \
 	fi
 
 .PHONY: distclean clean clean.library.%
