Set datarootdir to the value configure gives us (if any) so datadir works We then set datarootdir to something else later on so that things still work when configure doesn't set it.

--- a/mk/config.mk.in
+++ b/mk/config.mk.in
@@ -524,7 +524,9 @@ prefix          := @prefix@
 # New autoconf (>= 2.60?) make a configure with a --datarootdir=DIR flag.
 # However, in order to support older autoconf's we don't use it.
 # datarootdir is set lower down instead.
-# datarootdir		= @datarootdir@
+# But, as datadir is defined in terms of datarootdir, we also need to
+# set it to the value (if any) that configure gives it here.
+datarootdir     := @datarootdir@
 
 exec_prefix     := @exec_prefix@
 bindir          := @bindir@
