Fix up bindist creation and publishing

--- a/bindisttest/Makefile
+++ b/bindisttest/Makefile
@@ -8,20 +8,18 @@ default_target: all
 TOP=..
 include $(TOP)/mk/boilerplate.mk
 
-INST_DIR = $(FPTOOLS_TOP_ABS)/bindisttest/installed
-
 all:
 	$(RM) -rf installed
 	$(RM) -rf ghc*
 	$(RM) HelloWorld HelloWorld.o HelloWorld.hi output
-	$(TAR) -jxf ../$(BIN_DIST_TARBALL)
+	$(TAR) -jxf $(BIN_DIST_TARBALL)
 ifeq "$(Windows)" "YES"
-	mv $(BIN_DIST_NAME) $(INST_DIR)
+	mv $(BIN_DIST_NAME) $(BIN_DIST_INST_DIR)
 else
-	cd $(BIN_DIST_NAME) && ./configure --prefix=$(INST_DIR)
+	cd $(BIN_DIST_NAME) && ./configure --prefix=$(BIN_DIST_INST_DIR)
 	cd $(BIN_DIST_NAME) && make install
 endif
-	$(INST_DIR)/bin/ghc --make HelloWorld
+	$(BIN_DIST_INST_DIR)/bin/ghc --make HelloWorld
 	./HelloWorld > output
 	$(CONTEXT_DIFF) output expected_output
 
