--- a/distrib/Makefile-bin-vars.in
+++ b/distrib/Makefile-bin-vars.in
@@ -1,21 +1,30 @@
 
 # Where we are
 bindist_abs_root = @hardtop@
+FPTOOLS_TOP_ABS  = @hardtop@
+
+# This Makefile isn't used on Windows, so wel always have ghc-pkg.bin
+# rather than ghc-pkg.exe.
+GHC_PKG_PROG = $(FPTOOLS_TOP_ABS)/utils/ghc-pkg/ghc-pkg.bin
 
 # Where the different pieces of the bundle should go:
 bindir      = @bindir@
 libdir      = @libdir@/$(package)-$(version)
 libexecdir  = $(libdir)
+datarootdir = @datarootdir@
 datadir     = @datadir@/$(package)-$(version)
 
 platform    = @TargetPlatform@
 prefix      = @prefix@
 exec_prefix = @exec_prefix@
 
+headerdir   = $(libdir)/include
+
 # default
-htmldir     = $(datadir)/html
-psdir       = $(datadir)
-pdfdir      = $(datadir)
+docdir      = @datadir@/doc/ghc
+htmldir     = $(docdir)
+psdir       = $(docdir)
+pdfdir      = $(docdir)
 
 
 PERL        = @PerlCmd@
@@ -44,6 +53,9 @@ INSTALL_LIB     = $(INSTALL) $(INSTALL_LIB_OPTS)
 INSTALL_DATA    = $(INSTALL) $(INSTALL_DATA_OPTS)
 INSTALL_SCRIPT  = $(INSTALL) $(INSTALL_SCRIPT_OPTS)
 INSTALL_PROGRAM = $(INSTALL) $(INSTALL_PROGRAM_OPTS)
+INSTALL_HEADER  = $(INSTALL) $(INSTALL_HEADER_OPTS)
+INSTALL_SHLIB   = $(INSTALL) $(INSTALL_SHLIB_OPTS)
+INSTALL_MAN     = $(INSTALL) $(INSTALL_MAN_OPTS)
 
 # What's common to all installs
 INSTALL_OPTS= $(EXTRA_INSTALL_OPTS)
@@ -56,6 +68,9 @@ INSTALL_LIB_OPTS     = -m $(LIB_PERMS) $(INSTALL_OPTS) $(EXTRA_INSTALL_LIB_OPTS)
 INSTALL_DATA_OPTS    = -m $(LIB_PERMS) $(INSTALL_OPTS) $(EXTRA_INSTALL_DATA_OPTS)
 INSTALL_SCRIPT_OPTS  = -m $(BIN_PERMS) $(INSTALL_OPTS) $(EXTRA_INSTALL_SCRIPT_OPTS)
 INSTALL_PROGRAM_OPTS = -m $(BIN_PERMS) $(INSTALL_OPTS) $(EXTRA_INSTALL_PROGRAM_OPTS)
+INSTALL_HEADER_OPTS  = -m $(LIB_PERMS) $(INSTALL_OPTS) $(EXTRA_INSTALL_HEADER_OPTS)
+INSTALL_SHLIB_OPTS   = -m $(BIN_PERMS) $(INSTALL_OPTS) $(EXTRA_INSTALL_SHLIB_OPTS)
+INSTALL_MAN_OPTS     = -m $(LIB_PERMS) $(INSTALL_OPTS) $(EXTRA_INSTALL_MAN_OPTS)
 
 EXECUTABLE_FILE = chmod $(BIN_PERMS)
 
